<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="60dp"
    tools:context=".ui.screens.initial_screen.FragmentInitialScreen">

    <TextView
        android:id="@+id/location_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/location_instructions"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/permission_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="24dp"
        android:text="@string/relaunch_permission_dialog_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/browse_city_manually_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse_city_manually_text"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</LinearLayout>